@@ -1,0 +1,62 @@
+<?xml version="1.0"?>
+<!-- $Id$ -->
+<project name="Tapestry Contrib Framework" default="install">
+  <!-- Directory in which compiled classes are placed -->
+  <property name="classes" value="classes"/>
+  <!-- Directory that contains library frameworks, and to
+       which the framework is eventually installed -->
+  <property name="lib" value="../lib"/>
+  <!-- Directory containing source code and package resources -->
+  <property name="src" value="src"/>
+  <!-- Path of the installed framework jar -->
+  <property name="framework.jar" value="${lib}/net.sf.tapestry.contrib.jar"/>
+  <!-- Relative path to the Javadoc directory -->
+  <property name="javadoc.dir" value="../doc/api"/>
+  <path id="project.class.path">
+    <pathelement location="${lib}/ejb.jar"/>
+    <pathelement location="${lib}/javax.servlet.jar"/>
+    <pathelement location="${lib}/log4j-core.jar"/>
+    <pathelement location="${lib}/javax.xml.jaxp.jar"/>
+    <pathelement location="${lib}/org.apache.crimson.jar"/>
+    <pathelement location="${lib}/com.primix.tapestry.jar"/>
+  </path>
+  <target name="init">
+    <tstamp/>
+    <mkdir dir="${classes}"/>
+  </target>
+  <target name="clean">
+    <delete dir="${classes}"/>
+  </target>
+  <target name="compile" depends="init" description="Compile all classes in the framework.">
+    <javac srcdir="${src}" destdir="${classes}">
+      <classpath refid="project.class.path"/>
+    </javac>
+  </target>
+  <target name="install" depends="compile" description="Compile all classes and build the installed JAR including all package resources.">
+    <jar jarfile="${framework.jar}">
+      <fileset dir="${classes}"/>
+      <fileset dir="${src}">
+        <include name="**/*.jwc"/>
+        <include name="**/*.html"/>
+        <include name="**/*.gif"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.script"/>
+        <include name="**/*.properties"/>
+        <include name="**/*.css"/>
+        <include name="**/*.swf"/>
+        <include name="**/*.js"/>
+        <exclude name="**/package.html"/>
+      </fileset>
+    </jar>
+  </target>
+  <target name="javadoc">
+    <mkdir dir="${javadoc.dir}"/>
+    <javadoc sourcepath="${src}" destdir="${javadoc.dir}" classpathref="project.class.path" version="true" author="true" use="true" splitindex="true" packagenames="net.sf.tapestry.contrib.*" windowtitle="Tapester Contrib API">
+      <link href="http://java.sun.com/j2se/1.3/docs/api"/>
+      <link href="http://java.sun.com/j2ee/j2sdkee/techdocs/api"/>
+      <link href="http://jakarta.apache.org/log4j/docs/api"/>
+      <link href="http://java.sun.com/xml/jaxp-docs-1.1/docs/api"/>
+    </javadoc>
+  </target>
+</project>
+
