@@ -22,18 +22,11 @@
   <Set name="LogSink">
     <New class="org.mortbay.util.WriterLogSink"/>
   </Set>
-
-
+  
   <Call name="addWebApplication">
     <Arg>/tutorial/*</Arg>
-    <Arg>Tutorial.war</Arg>
+    <Arg>../../lib/Tutorial.war</Arg>
     <Arg/>
   </Call>
 
-  <Call name="addContext">
-    <Arg>/private-assets/*</Arg>
-    <Set name="ResourceBase">.build/private-assets</Set>
-    <Set name="ServingResources">TRUE</Set>
-  </Call>
-  
 </Configure>
