@@ -1,3 +1,8 @@
+* Sep 23 2001 hship
+
+framework, contrib, tutorial:
+- Provide initial build.xml (Ant build files)
+
 * Sep 21 2001 hship
 
 framework:
